remove print, fix email alerts copy, fix chip spacing

--- a/client/src/styles/DistrictAlertsPage.scss
+++ b/client/src/styles/DistrictAlertsPage.scss
@@ -120,7 +120,7 @@ div.DistrictAlertsPage {
           justify-content: center;
           flex-wrap: wrap;
           gap: 0.75rem;
-          margin: 1.5rem 0;
+          margin: 0 0 1rem 0;
           overflow: auto; // TODO: decide how to handle overflow/scrolling
           max-height: 500px;
 
